@@ -63,4 +63,14 @@ public class TestXYShapeEncoding extends BaseShapeEncodingTestCase {
   protected Component2D createPolygon2D(Object polygon) {
     return XYGeometry.create((XYPolygon)polygon);
   }
+
+  public void testRotationChangesOrientation() {
+    double ay = -3.4028218437925203E38;
+    double ax = 3.4028220466166163E38;
+    double by = 3.4028218437925203E38;
+    double bx = -3.4028218437925203E38;
+    double cy = 3.4028230607370965E38;
+    double cx = -3.4028230607370965E38;
+    verifyEncoding(ay, ax, by, bx, cy, cx);
+  }
 }
